# cst

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
locales/: en.yml  es.yml
src/: app.rs  error.rs  lib.rs  main.rs
src/application/services/task/: service.rs  tests.rs
src/config/: language.rs  settings.rs  tests.rs
src/domain/models/task/: entity.rs  filter.rs  tests.rs  types.rs
src/domain/repositories/task/: repository.rs
src/infrastructure/cli/: commands.rs  config_handler.rs  handlers.rs  interactor.rs  mappers.rs  parser.rs  tests.rs
src/infrastructure/cli/ui/: colors.rs  format_list.rs  format_task.rs
src/infrastructure/cli/ui/messages/: confirm.rs  error.rs  export.rs  help.rs  import.rs  task.rs
src/infrastructure/db/sqlite/: db.rs  mappers.rs  queries.rs  sql_types.rs  tests.rs
src/infrastructure/db/sqlite/queries/: create_tasks.sql  create_undo_snapshot.sql  delete_all_tasks.sql  delete_many_tasks.sql  delete_task.sql  done_many_tasks.sql  filter_tasks.sql  has_undo_snapshot.sql  insert_task.sql  restore_undo_snapshot.sql  save_undo_snapshot.sql  select_all_tasks.sql  select_paged_tasks.sql  select_task_by_id.sql  update_many_tasks.sql  update_task.sql
src/infrastructure/io/: interactor.rs  mappers.rs  progress.rs  tests.rs  types.rs
src/infrastructure/io/export/: common.rs  csv.rs  excel.rs  json.rs  markdown.rs  tests.rs  toml.rs  yaml.rs
src/infrastructure/io/import/: common.rs  csv.rs  json.rs  tests.rs  toml.rs  yaml.rs
src/infrastructure/io/import/fixtures/: tasks.csv  tasks.json  tasks.toml  tasks.yaml
